--- a/warmups/package.json
+++ b/warmups/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "abbreviate.js",
   "dependencies": {
-    "eslint": "^4.9.0"
+    "eslint": "^4.9.0",
+    "faker": "^4.1.0"
   },
   "devDependencies": {
     "eslint-config-standard": "^10.2.1",
