--- a/user-manager/package.json
+++ b/user-manager/package.json
@@ -17,6 +17,7 @@
     "eslint-plugin-standard": "^3.0.1"
   },
   "dependencies": {
+    "avatar-generator": "^1.0.8",
     "blueimp-md5": "^2.10.0",
     "faker": "^4.1.0",
     "fetch": "^1.1.0",
