Queen threatens king and skiing warmups

--- a/warmups/package.json
+++ b/warmups/package.json
@@ -5,7 +5,8 @@
   "main": "abbreviate.js",
   "dependencies": {
     "eslint": "^4.9.0",
-    "faker": "^4.1.0"
+    "faker": "^4.1.0",
+    "node-fetch": "^1.7.3"
   },
   "devDependencies": {
     "eslint-config-standard": "^10.2.1",
